# cfar

./: CMakeLists.txt  README.md
include/cfar/: ca_cfar.hpp  detection.hpp  edge_policy.hpp
